spellings fix for visible

--- a/resources/scss/globals/__mixins.scss
+++ b/resources/scss/globals/__mixins.scss
@@ -170,7 +170,7 @@
     backdrop-filter: blur(6px);
     background: rgba(0, 0, 0, .25);
     z-index: 1000;
-    &.visable{
+    &.visible{
         display: flex;
     }
     .popup{
