--- a/resources/scss/supplier/SupplierOverview.scss
+++ b/resources/scss/supplier/SupplierOverview.scss
@@ -186,4 +186,7 @@
     .delete-selected-popup{
         @include popup-container;
     }
+    .create-popup{
+        @include popup-container;
+    }
 }
